--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,7 +15,7 @@
     <color name="color11">#C4A8D8</color>
     <color name="color12">#D95B87</color>
     <color name="color13">#5058AE</color>
-    <color name="color14">#B0e01A</color>
+    <color name="color14">#388E3C</color>
     <color name="disabled_color">#44000000</color>
     <color name="error_color">#E7492E</color>
     <color name="color15">#D3E1FB</color>
