--- a/app/src/main/res/layout/notification.xml
+++ b/app/src/main/res/layout/notification.xml
@@ -4,8 +4,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@drawable/layout_bg">
-    <Toolbar
-        android:id="@+id/sing_in_toolbar"
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:theme="@style/myToolbarTheme">
@@ -13,12 +13,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="@string/app_name"
+            android:text="@string/notification"
             android:fontFamily="casual"
             android:textAppearance="@style/TextAppearance.AppCompat.Headline"
             android:textColor="@color/white"
             android:textStyle="bold" />
-    </Toolbar>
+    </android.support.v7.widget.Toolbar>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -28,75 +28,9 @@
         android:layout_margin="10dp"
         android:paddingTop="10dp"
         android:background="@color/white">
-        <ImageView
-            android:id="@+id/imgLogo"
-            android:layout_width="115dp"
-            android:layout_height="130dp"
-            android:layout_gravity="center"
-            android:scaleType="fitXY"
-            android:padding="10dp"
-            android:src="@drawable/logo"
-            android:background="@drawable/borders"/>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:orientation="vertical">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/app_name"
-                android:layout_gravity="center_horizontal"
-                android:textColor="@color/colorAccent"
-                android:fontFamily="casual"
-                android:textSize="20sp" />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:fontFamily="casual"
-                android:text="@string/text"
-                android:textColor="@color/color13"
-                android:textSize="14sp"
-                android:textStyle="bold"/>
-        </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="2"
-            android:orientation="vertical"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp">
-        <Button
-            android:id="@+id/attendance_btn"
-            android:layout_marginTop="30dp"
-            android:layout_width="match_parent"
-            android:layout_height="80dp"
-            android:text="@string/attendance"
-            android:textColor="@color/colorAccent"
-            android:background="@drawable/borders"
-            android:drawableRight="@drawable/fingerprint2"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:gravity="left|center"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp" />
-        <Button
-            android:id="@+id/deperture_btn"
-            android:layout_marginTop="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="80dp"
-            android:text="@string/departure"
-            android:gravity="left|center"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:background="@drawable/borders"
-            android:textColor="@color/colorAccent"
-            android:drawableRight="@drawable/fingerprint2" />
-        </LinearLayout>
 
-</LinearLayout>
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -153,13 +87,13 @@
                 android:paddingLeft="7dp"
                 android:paddingTop="7dp"
                 android:paddingRight="7dp"
-                android:src="@drawable/archive" />
+                android:src="@drawable/fingerprint2" />
             <TextView
                 android:layout_width="match_parent"
                 android:gravity="center_horizontal"
                 android:layout_height="0dp"
                 android:layout_weight="1"
-                android:text="@string/archive"
+                android:text="@string/finger"
                 android:layout_gravity="center_horizontal"
                 android:textColor="@color/colorAccent"
                 android:textSize="13sp" />
@@ -182,13 +116,13 @@
                 android:paddingLeft="7dp"
                 android:paddingTop="7dp"
                 android:paddingRight="7dp"
-                android:src="@drawable/alarm" />
+                android:src="@drawable/archive" />
             <TextView
                 android:layout_width="match_parent"
                 android:gravity="center_horizontal"
                 android:layout_height="0dp"
                 android:layout_weight="1"
-                android:text="@string/notification"
+                android:text="@string/archive"
                 android:layout_gravity="center_horizontal"
                 android:textColor="@color/colorAccent"
                 android:textSize="13sp" />
