--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,8 @@ android:orientation="vertical"
     android:layout_gravity="center"
     android:orientation="vertical"
     android:layout_marginTop="30dp"
-    tools:ignore="HardcodedText">
+    tools:ignore="HardcodedText"
+   >
 
     <TextView
         android:layout_width="wrap_content"
