--- a/app/src/main/res/layout/submit_absent_excuse.xml
+++ b/app/src/main/res/layout/submit_absent_excuse.xml
@@ -3,8 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/layout_bg">
-    <android.support.v7.widget.Toolbar
+    android:background="@drawable/layout_bg"
+    android:layoutDirection="ltr">
+    <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
@@ -18,7 +19,7 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Headline"
             android:textColor="@color/white"
             android:textStyle="bold" />
-    </android.support.v7.widget.Toolbar>
+    </androidx.appcompat.widget.Toolbar>
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -32,6 +33,7 @@
         android:layout_gravity="center_horizontal">
 
         <TextView
+            android:layout_marginTop="16dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Select one"
@@ -40,7 +42,7 @@
 
 
         <RadioGroup
-            android:id="@+id/Q1.1radioGroup"
+            android:id="@+id/radioGroup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
@@ -80,36 +82,50 @@
         </RadioGroup>
 
     <EditText
+        android:id="@+id/edit_subject1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Subject"/>
-        <EditText
+        <TextView
+            android:visibility="gone"
+            android:id="@+id/txt_start1"
+            android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Start Date"/>
-        <EditText
+            android:text="Start Date"
+            android:paddingRight="3dp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
+        <TextView
+            android:visibility="gone"
+            android:id="@+id/txt_end1"
+            android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="End Date"/>
+            android:text="End Date"
+            android:paddingRight="3dp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
         <EditText
+            android:id="@+id/edit_details_1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Other Details"/>
 
         <ImageButton
+            android:id="@+id/upload1"
             android:layout_width="120dp"
             android:layout_height="100dp"
             android:layout_gravity="center"
             android:layout_marginTop="20dp"
-            android:background="@drawable/upload"
-            />
+            android:background="@drawable/upload" />
         <TextView
+            android:id="@+id/file_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/color13"
             android:text="Select file"
             android:layout_gravity="center"/>
         <Button
+            android:id="@+id/btn_excuse"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/borders"
