--- a/app/src/main/res/layout/vacation_reques.xml
+++ b/app/src/main/res/layout/vacation_reques.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@drawable/layout_bg">
-    <android.support.v7.widget.Toolbar
+    <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
@@ -18,7 +18,7 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Headline"
             android:textColor="@color/white"
             android:textStyle="bold" />
-    </android.support.v7.widget.Toolbar>
+    </androidx.appcompat.widget.Toolbar>
 <ScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -32,37 +32,54 @@
         android:background="@drawable/borders"
         android:layout_gravity="center_horizontal">
 
+
         <EditText
+            android:layout_marginTop="16dp"
+            android:id="@+id/edit_subject2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Subject"/>
-        <EditText
+        <TextView
+            android:id="@+id/txt_start2"
+            android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Start Date"/>
-        <EditText
+            android:text="Start Date"
+            android:onClick="setDate"
+            android:paddingRight="3dp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
+        <TextView
+            android:id="@+id/txt_end2"
+            android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="End Date"/>
+            android:text="End Date"
+            android:onClick="setDateTwo"
+            android:paddingRight="3dp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
         <EditText
+            android:id="@+id/edit_details_2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Other Details"/>
 
+
         <ImageButton
+            android:id="@+id/upload2"
             android:layout_width="120dp"
             android:layout_height="100dp"
             android:layout_gravity="center"
             android:layout_marginTop="20dp"
-            android:background="@drawable/upload"
-            />
+            android:background="@drawable/upload" />
         <TextView
+            android:id="@+id/file_name2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/color13"
             android:text="Select file"
             android:layout_gravity="center"/>
         <Button
+            android:id="@+id/btn_vacation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/borders"
